--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.4.12",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apollo-link-rest": "^0.8.0-beta.0",
     "axios": "^0.21.4",
+    "graphql": "^15.5.3",
+    "graphql-anywhere": "^4.2.7",
     "graphql-hooks": "^5.4.0",
+    "graphql-tag": "^2.12.5",
+    "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -16,8 +22,7 @@
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.0",
-    "web-vitals": "^1.1.2"
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
