--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.15",
     "apollo-link-rest": "^0.8.0-beta.0",
     "axios": "^0.21.4",
+    "firebase": "^9.1.3",
     "graphql": "^15.5.3",
     "graphql-anywhere": "^4.2.7",
     "graphql-hooks": "^5.4.0",
@@ -24,10 +30,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
-    "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
